[gd_scene load_steps=25 format=1]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Art/PlayerSpritesheet.png" type="Texture" id=2]
[ext_resource path="res://Animations/Building.tres" type="Animation" id=3]
[ext_resource path="res://Animations/Chopping.tres" type="Animation" id=4]
[ext_resource path="res://Animations/Climbing.tres" type="Animation" id=5]
[ext_resource path="res://Animations/Duck.tres" type="Animation" id=6]
[ext_resource path="res://Animations/Falling.tres" type="Animation" id=7]
[ext_resource path="res://Animations/Fighting.tres" type="Animation" id=8]
[ext_resource path="res://Animations/Idle.tres" type="Animation" id=9]
[ext_resource path="res://Animations/Jump.tres" type="Animation" id=10]
[ext_resource path="res://Animations/Landing.tres" type="Animation" id=11]
[ext_resource path="res://Animations/Running.tres" type="Animation" id=12]
[ext_resource path="res://Animations/Shooting.tres" type="Animation" id=13]
[ext_resource path="res://Animations/Slashing.tres" type="Animation" id=14]
[ext_resource path="res://Animations/Throwing.tres" type="Animation" id=15]
[ext_resource path="res://Art/ToolsPopup.png" type="Texture" id=16]
[ext_resource path="res://Art/ToolsSpritesheet.png" type="Texture" id=17]
[ext_resource path="res://Scenes/DustParticles.tscn" type="PackedScene" id=18]
[ext_resource path="res://Art/Light.png" type="Texture" id=19]
[ext_resource path="res://SampleLibrary.tres" type="SampleLibrary" id=20]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 38.2122, 68.0602 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 29.6476, 3.25702 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 35, 62.1069 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 35, 64.4301 )

[node name="Player" type="KinematicBody2D" groups=[ "Players" ]]

transform/pos = Vector2( 492.705, 288.942 )
z/z = 10
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -8.51093, 41.7384 )
shapes/0/trigger = false
collision/layers = 9
collision/mask = 9
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( -8.51093, 41.7384 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="PlayerSprite" type="Sprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( -9.20475, 41.4795 )
texture = ExtResource( 2 )
vframes = 4
hframes = 8
frame = 31

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerSprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Building = ExtResource( 3 )
anims/Chopping = ExtResource( 4 )
anims/Climbing = ExtResource( 5 )
anims/Duck = ExtResource( 6 )
anims/Falling = ExtResource( 7 )
anims/Fighting = ExtResource( 8 )
anims/Idle = ExtResource( 9 )
anims/Jump = ExtResource( 10 )
anims/Landing = ExtResource( 11 )
anims/Running = ExtResource( 12 )
anims/Shooting = ExtResource( 13 )
anims/Slashing = ExtResource( 14 )
anims/Throwing = ExtResource( 15 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="ToolsPopup" type="Sprite" parent="."]

transform/pos = Vector2( -12.8072, -116.145 )
z/z = 40
texture = ExtResource( 16 )
hframes = 2

[node name="Tool" type="Sprite" parent="."]

transform/pos = Vector2( -10.8072, -126.145 )
z/z = 40
texture = ExtResource( 17 )
hframes = 6

[node name="FeetCollider" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( -4.87677, 116.58 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -1.59607, -1.16905 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 2
collision/mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FeetCollider"]

transform/pos = Vector2( -1.59607, -1.16905 )
shape = SubResource( 2 )
trigger = true
_update_shape_index = 0

[node name="LeftCollider" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -57.4622, 42.4464 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 4
collision/mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftCollider"]

transform/pos = Vector2( -57.4622, 42.4464 )
shape = SubResource( 3 )
trigger = true
_update_shape_index = 0

[node name="RightCollider" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 43.3149, 44.3858 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 4
collision/mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightCollider"]

transform/pos = Vector2( 43.3149, 44.3858 )
shape = SubResource( 4 )
trigger = true
_update_shape_index = 0

[node name="DustParticles" parent="." instance=ExtResource( 18 )]

transform/pos = Vector2( -4.87677, 110.703 )

[node name="Light2D" type="Light2D" parent="."]

enabled = true
texture = ExtResource( 19 )
offset = Vector2( 0, 0 )
scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 2
range/height = 0.0
range/z_min = -1024
range/z_max = 1024
range/layer_min = 0
range/layer_max = 0
range/item_mask = 1
shadow/enabled = false
shadow/color = Color( 0, 0, 0, 0 )
shadow/buffer_size = 2048
shadow/esm_multiplier = 80.0
shadow/item_mask = 1

[node name="Light2D1" type="Light2D" parent="."]

transform/pos = Vector2( -8.95959, -127.063 )
enabled = true
texture = ExtResource( 19 )
offset = Vector2( 0, 0 )
scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 2
range/height = 0.0
range/z_min = -1024
range/z_max = 1024
range/layer_min = 0
range/layer_max = 0
range/item_mask = 1
shadow/enabled = false
shadow/color = Color( 0, 0, 0, 0 )
shadow/buffer_size = 2048
shadow/esm_multiplier = 80.0
shadow/item_mask = 1

[node name="SamplePlayer2D" type="SamplePlayer2D" parent="."]

params/volume_db = -8.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 3
config/samples = ExtResource( 20 )
config/pitch_random = 0.2


